--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <meta property="og:title" content="brisapartner-promo" />
+    <meta property="og:title" content="Brisanet Internet Fibra Óptica" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
