--- a/index.html
+++ b/index.html
@@ -39,6 +39,30 @@
   </head>
 
   <body>
+
+    <!-- Adicione dentro do <body> do seu index.html -->
+<!-- Subpáginas para SEO -->
+<div id="planos" itemScope itemType="https://schema.org/WebPage" itemProp="mainEntity">
+  <meta itemProp="name" content="Planos de Internet | Ofertas Brisanet" />
+  <meta itemProp="description" content="Conheça os planos de internet fibra óptica Brisanet. Velocidade, estabilidade e Wi-Fi grátis para sua casa." />
+</div>
+<div id="combos" itemScope itemType="https://schema.org/WebPage" itemProp="mainEntity">
+  <meta itemProp="name" content="Combos | Ofertas Brisanet" />
+  <meta itemProp="description" content="Economize com os combos Brisanet: internet, TV e telefone em um só pacote. Veja as ofertas!" />
+</div>
+<div id="empresarial" itemScope itemType="https://schema.org/WebPage" itemProp="mainEntity">
+  <meta itemProp="name" content="Planos Empresariais | Ofertas Brisanet" />
+  <meta itemProp="description" content="Soluções de internet fibra óptica para empresas de todos os portes. Atendimento especializado Brisanet." />
+</div>
+<div id="contratar" itemScope itemType="https://schema.org/WebPage" itemProp="mainEntity">
+  <meta itemProp="name" content="Contratar | Ofertas Brisanet" />
+  <meta itemProp="description" content="Solicite orçamento ou contrate online os serviços Brisanet. Atendimento rápido e seguro." />
+</div>
+<div id="faq" itemScope itemType="https://schema.org/WebPage" itemProp="mainEntity">
+  <meta itemProp="name" content="FAQ | Ofertas Brisanet" />
+  <meta itemProp="description" content="Tire suas dúvidas sobre planos, instalação, cobertura e atendimento Brisanet." />
+</div>
+
     <div id="root"></div>
   </body>
 </html>
