--- a/admin.html
+++ b/admin.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin - Ofertas Brisanet</title>
-    <script>
-      // Redireciona para a URL correta do SPA
-      window.location.href = '/#/admin';
-    </script>
+    <title>Ofertas Brisanet | Admin</title>
+    <meta name="robots" content="noindex, nofollow" />
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
-    <p>Redirecionando para área administrativa...</p>
+    <div id="root"></div>
+    <script>
+      // GitHub Pages admin redirect
+      (function() {
+        const basePath = window.location.hostname.includes('github.io') ? '/brisanet' : '';
+        window.location.replace(`${basePath}/#/admin`);
+      })();
+    </script>
   </body>
 </html>
