--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11127318292"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-11127318292');
+    </script>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ofertas Brisanet | Internet Fibra Óptica, Combos e Planos Empresariais</title>
@@ -34,7 +43,7 @@
     <meta name="description" content="Planos empresariais Brisanet: soluções de internet para empresas de todos os portes." data-page="empresarial" />
     <meta name="description" content="FAQ Brisanet: tire suas dúvidas sobre planos, instalação e atendimento." data-page="faq" />
     -->
-    <script type="module" crossorigin src="/assets/main-BTe2Agy2.js"></script>
+    <script type="module" crossorigin src="/assets/main-BB4R4pkk.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-C9DvIA3D.css">
   </head>
 
