--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <meta name="description" content="Planos empresariais Brisanet: soluções de internet para empresas de todos os portes." data-page="empresarial" />
     <meta name="description" content="FAQ Brisanet: tire suas dúvidas sobre planos, instalação e atendimento." data-page="faq" />
     -->
-    <script type="module" crossorigin src="/assets/main-BB4R4pkk.js"></script>
+    <script type="module" crossorigin src="/assets/main-DEHZR_Lt.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-C9DvIA3D.css">
   </head>
 
