--- a/admin.html
+++ b/admin.html
@@ -8,6 +8,8 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'AW-11127318292');
+      gtag('config', 'AW-11127318292/vdBLCIPQ0f0aEJTO9bkp', { 'phone_conversion_number': '0800 878 3344' }); // Page view
+      gtag('config', 'AW-11127318292/nkuHCPbr4f0aEJTO9bkp'); // Form submission
     </script>
     
     <meta charset="UTF-8" />
