--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <meta name="description" content="Planos empresariais Brisanet: soluções de internet para empresas de todos os portes." data-page="empresarial" />
     <meta name="description" content="FAQ Brisanet: tire suas dúvidas sobre planos, instalação e atendimento." data-page="faq" />
     -->
-    <script type="module" crossorigin src="/assets/main-61och24z.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-CHjk6xty.css">
+    <script type="module" crossorigin src="/assets/main-CQsU3ka-.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-DhDC3F8n.css">
   </head>
 
   <body>
