--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <meta name="description" content="Planos empresariais Brisanet: soluções de internet para empresas de todos os portes." data-page="empresarial" />
     <meta name="description" content="FAQ Brisanet: tire suas dúvidas sobre planos, instalação e atendimento." data-page="faq" />
     -->
-    <script type="module" crossorigin src="/assets/main-B3LExSH8.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-RP8kkcb5.css">
+    <script type="module" crossorigin src="/assets/main-CSXpsRBp.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-C-NNb0po.css">
   </head>
 
   <body>
