--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <meta name="description" content="Planos empresariais Brisanet: soluções de internet para empresas de todos os portes." data-page="empresarial" />
     <meta name="description" content="FAQ Brisanet: tire suas dúvidas sobre planos, instalação e atendimento." data-page="faq" />
     -->
-    <script type="module" crossorigin src="/assets/main-4LFo2mAM.js"></script>
+    <script type="module" crossorigin src="/assets/main-C1gSBJZu.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-DuzPt6Ts.css">
   </head>
 
