--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <meta name="description" content="Planos empresariais Brisanet: soluções de internet para empresas de todos os portes." data-page="empresarial" />
     <meta name="description" content="FAQ Brisanet: tire suas dúvidas sobre planos, instalação e atendimento." data-page="faq" />
     -->
-    <script type="module" crossorigin src="/assets/main-C1gSBJZu.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-DuzPt6Ts.css">
+    <script type="module" crossorigin src="/assets/main-D3Z6ABcV.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-b0QaYn-X.css">
   </head>
 
   <body>
